# KittenTTS

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  AUDIO_QUALITY.md  Dockerfile  KITTENTTS_API_REFERENCE.md  README.md  README.zh.md  TEST_GUIDE.md  app.py  check_environment.py  cli.py  docker-compose.yml  example.py  example_cuda.py  example_ko.py  example_streaming.py  final_example.py  gradio_app.py  kitten-tts  manifest.json  pyproject.toml  requirements.txt  requirements_gpu.txt  requirements_webui.txt  run.py  run_all_tests.py  run_webui.py  setup.py  simple_example.py  start.json  test_backend.py  test_error_cases.py  test_flask_template.py  test_html.py  test_tts.py  test_webui_api.py  tts-api.py  tts.py  (+1 more)
.docker/: Dockerfile  README.md  run.py
.github/workflows/: ci.yml
kittentts/: __init__.py  __main__.py  chinese_processor.py  cli.py  cli_entry.py  cli_process.py  example_usage.py  get_model.py  onnx_model.py  preprocess.py  realtime_engine.py  utils.py
kittentts-rs/: .gitignore  Cargo.toml  README.md
kittentts-rs/crates/espeak-ng-sys/: Cargo.toml  build.rs  wrapper.h
kittentts-rs/src/: config.rs  espeak.rs  lib.rs  main.rs  model.rs  preprocess.rs  text_cleaner.rs
kittentts.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_chunk_text_and_api.py
webui/: app.py  history.json  server.py
webui/static/: app.js  style.css
webui/templates/: index.html
