[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kittentts"
description = "Ultra-lightweight text-to-speech model with just 15 million parameters"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "KittenML"}
]
keywords = ["text-to-speech", "tts", "speech-synthesis", "neural-networks", "onnx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "espeakng_loader",
    "num2words",
    "numpy",
    "onnxruntime",
    "phonemizer-fork~=3.3.2",
    "soundfile",
    "spacy",
]
dynamic = ["version"]

[project.optional-dependencies]
streaming = [
    "sounddevice",
]

[project.urls]
Homepage = "https://github.com/kittenml/kittentts"
Repository = "https://github.com/kittenml/kittentts"
Issues = "https://github.com/kittenml/kittentts/issues"

[project.scripts]
kitten-tts = "kittentts.cli_entry:main"

[tool.hatch.version]
path = "kittentts/__init__.py"
