[package]
name = "kittentts-rs"
version = "0.1.0"
edition = "2021"
description = "Ultra-lightweight text-to-speech inference in Rust — port of KittenTTS"
license = "MIT"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.16"
ndarray-npy = { version = "0.9", features = ["npz"] }
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
once_cell = "1.19"
fancy-regex = "0.13"
espeak-ng-sys = { path = "crates/espeak-ng-sys" }
