[package]
name = "espeak-ng-sys"
version = "0.1.0"
edition = "2021"
links = "espeak-ng"
include = [
    "src/**/*",
    "espeak-ng/espeak-ng-data/**/*",
    "espeak-ng/dictsource/**/*",
    "build.rs",
    "wrapper.h",
]

[dependencies]
# Piper uses these for path resolution
once_cell = "1.19"

[build-dependencies]
cmake = "0.1"
bindgen = "0.70"
glob = "0.3"
